# Documentation-with-JupyterBooks

./: .buildinfo  README.md  api.html  genindex.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
docs/: _config.yml  _toc.yml  intro.md
src/mymodule/: mylib.py
