[metadata]
name = mymodule
description = Test repo to evaluate the documentation making process with sphinx
author = Pierpaolo Pravatto
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    mymodule
install_requires =
    numpy
python_requires = >=3.8
package_dir =
    =src
zip_safe = no